@@ -1,4 +1,4 @@
-SUBARCH_SUPPORTED = default r4k-ip22 r5k-ip22
+SUBARCH_SUPPORTED = demo r4k-ip22 r5k-ip22
 
 # FIXME: Temporary fix, these files should be in a udeb!
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
