@@ -17,6 +17,7 @@ debian-installer (20040204) UNRELEASED; urgency=low
     - Fix broken alpha build, input-modules isn't created for -di
       kernel flavour.
     - Adjust daily-build script for the new build system.
+    - Remove special handling for "default", it was broken anyway.
   * Thomas Poindessous
     - Remove redundant kbd-chooser from netboot pkg-list.
     - Add discover, discover-data to sparc netboot image. Closes: #227853
